--- a/search/index.html
+++ b/search/index.html
@@ -102,7 +102,8 @@
           <div class="col-12 col-md-3 bd-sidebar"><div class="logo"><img src="../_static/plot_header.png"></div>
 <div class="snippet">
     <div>Matthew Martz, PhD</div>
-    <div>Principal, Research and Machine Learning at PenroseHill/Firstleaf - Machine Learning | Predictive Modeling | Data Science | Biomedical Research</div>
+    <div>Principal, Research and Machine Learning at PenroseHill/Firstleaf</div>
+    <div>Machine Learning | Predictive Modeling | Data Science | Biomedical Research</div>
 </div>
           </div>
           
