--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Data Science | Python/Software Engineering | Cell Biology | Biophysics | Microsc
 <ul class="simple">
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
 <li><p class="card-text">PhD in Biochemistry and Molecular Biology, Thomas Jefferson University</p></li>
-<li><p class="card-text">Research Postdoctoral Fellow, Lineberger Cancer Center</p></li>
+<li><p class="card-text">Research Postdoctoral Fellow, Lineberger Cancer Center, University of North Carolina at Chapel Hill</p></li>
 <li><p class="card-text">18 years of Software Engineering and Data Science experience</p></li>
 <li><p class="card-text">15 years of rigorous scientific training in academic programs</p></li>
 </ul>
