--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ optimization problems to personalized medicine and medicinal AI. Find more about
 <p class="card-text">Principal, Research and Machine Learning at Penrose Hill/Firstleaf</p>
 <p class="card-text">Created and maintain the core algorithms behind the Firstleaf wine club.</p>
 <p class="card-text">Leading a team of Data Scientists and Machine Learning engineers developing machine learning and AI platforms to drive real time recommendations, inform business strategy, and create/integrate with product design life cycle. This includes the end-to-end development of the ML stack using both traditional ML and cutting edge deep learning techniques, along with novel algorithm development.</p>
-<p class="card-text">The Research and Machine Learning team is responsible for identifying and developing key Data Science and Machine Learning technologies for Firstleaf. We utilize cutting edge approaches to both empower internal company function as well as customer facing products. The team is also responsible for design and implementation of the patent-pending algorithm that drives the Firstleaf experience.</p>
+<p class="card-text">The Research and Machine Learning team is responsible for identifying and developing key Data Science and Machine Learning technologies for Firstleaf. We utilize cutting edge approaches to both empower internal company function as well as customer facing products. The team is also responsible for design and implementation of the patent algorithms that drive the Firstleaf experience.</p>
 </div>
 </div>
 </div>
@@ -208,6 +208,43 @@ Data Science | Python/Software Engineering | Cell Biology | Biophysics | Microsc
 <li><p class="card-text">Research Postdoctoral Fellow, Lineberger Cancer Center, University of North Carolina at Chapel Hill</p></li>
 <li><p class="card-text">18 years of Software Engineering and Data Science experience</p></li>
 <li><p class="card-text">15 years of rigorous scientific training in academic programs</p></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sphinx-bs container pb-4 docutils">
+<div class="row docutils">
+<div class="d-flex col-lg-12 p-0 docutils">
+<div class="card w-100 shadow docutils">
+<div class="card-header text-secondary font-weight-bold docutils">
+<p class="card-text">Patents</p>
+</div>
+<div class="card-body docutils">
+<ul class="simple">
+<li><p class="card-text">Systems and methods for labeling and distributing products having multiple versions with recipient version correlation on a per user basics</p></li>
+<li><p class="card-text">Systems and methods for controlling production and distribution of consumable items based on their chemical profiles</p></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sphinx-bs container pb-4 docutils">
+<div class="row docutils">
+<div class="d-flex col-lg-12 p-0 docutils">
+<div class="card w-100 shadow docutils">
+<div class="card-header text-secondary font-weight-bold docutils">
+<p class="card-text">Publications</p>
+</div>
+<div class="card-body docutils">
+<ul class="simple">
+<li><p class="card-text">Ramona Schrage, …, Matthew Martz, …, Evi Kostenis. The experimental power of FR900359 to study Gq-regulated biological processes. Nature Communications 6, Article number: 10156. 14 December 2015.</p></li>
+<li><p class="card-text">Michelle C Helms, Elda Grabocka, Matthew K Martz, Christopher C Fischer, Nobuchika Suzuki, Philip B Wedegaertner. Mitotic-dependent phosphorylation of leukemia-associated RhoGEF (LARG) by Cdk1. Cellular Signalling, Volume 28, Issue 1, January 2016, Pages 43-52.</p></li>
+<li><p class="card-text">Martz MK, Grabocka E, Beeharry N, Yen TJ, Wedegaertner PW. Leukemia-Associated RhoGEF (LARG) is a Novel RhoGEF in Cytokinesis and Required for the Proper Completion of Abscission. Mol. Biol. Cell September 15, 2013 vol. 24 no. 18 2785-2794.</p></li>
+<li><p class="card-text">Matthew Martz and Philip Wedegaertner: Faculty of 1000 Biology, 23 Jul 2010 F1000Prime.com/4242964#eval4039063</p></li>
+<li><p class="card-text">Carkaci-Salli N, Flanagan JM, Martz MK, Salli U, Walther DJ, Bader M, Vrana KE. Functional domains of human tryptophan hydroxylase 2 (hTPH2). J Biol Chem. 2006 Sep 22;281(38):28105-12. Epub 2006 Jul 24.</p></li>
 </ul>
 </div>
 </div>
