--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I spent much of my career researching novel cancer therapeutics through live cel
 You can now find me developing and implementing machine learning platforms and algorithms for everything from
 optimization problems to personalized medicine and medicinal AI. In recent years I have researched and built
 novel recommenders, 24/7 production machine learning solutions, and received patents for personalization solutions
-in the consumer sales space.</p>
+in the consumer sales space and chemical profile recommenders.</p>
 <div class="sphinx-bs container pb-4 docutils">
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
@@ -228,8 +228,8 @@ Data Science | Python/Software Engineering | Cell Biology | Biophysics | Microsc
 <ul class="simple">
 <li><p class="card-text">Systems and methods for labeling and distributing products having multiple versions with recipient version correlation on a per user basis</p></li>
 <li><p class="card-text">Systems and methods for controlling production and distribution of consumable items based on their chemical profiles</p></li>
-<li><p class="card-text">[Under review (title withheld): A patent application for recommender personalization under certain location-based constraints]</p></li>
-<li><p class="card-text">[Under review (title withheld): A patent application for the utilization of chemical data for certain predictive capabilities]</p></li>
+<li><p class="card-text">[Under review (title withheld)]: A patent application for recommender personalization under certain location-based constraints</p></li>
+<li><p class="card-text">[Under review (title withheld)]: A patent application for the utilization of chemical data for certain environmental predictive capabilities</p></li>
 </ul>
 </div>
 </div>
