--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@
           <div class="col-12 col-md-3 bd-sidebar"><div class="logo"><img src="../_static/profile.jpg"></div>
 <div class="snippet">
     <div class="name">Matthew Martz, PhD</div>
-    <div class="title">Principal, Research and Machine Learning at PenroseHill/Firstleaf</div>
+    <div class="title">Data Science Technical Lead at AgBiome</div>
     <div class="specialties">Machine Learning | Predictive Modeling | Data Science | Biomedical Research</div>
 </div>
           </div>
@@ -171,6 +171,21 @@ in the consumer sales space and chemical profile recommenders. Find more about m
 <div class="card w-100 shadow docutils">
 <div class="card-header text-secondary font-weight-bold docutils">
 <p class="card-text">Currently</p>
+</div>
+<div class="card-body docutils">
+<p class="card-text">Data Science Technical Lead at AgBiome</p>
+<p class="card-text">[more to come]</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sphinx-bs container pb-4 docutils">
+<div class="row docutils">
+<div class="d-flex col-lg-12 p-0 docutils">
+<div class="card w-100 shadow docutils">
+<div class="card-header text-secondary font-weight-bold docutils">
+<p class="card-text">Previously</p>
 </div>
 <div class="card-body docutils">
 <p class="card-text">Principal, Research and Machine Learning and Head of Data Science at Penrose Hill/Firstleaf</p>
@@ -254,7 +269,7 @@ Machine Learning, and Data Science.</p>
     <footer class="footer mt-5 mt-md-0">
   <div class="container">
     <p>
-          &copy; Copyright 2022, Matthew Martz.<br/>
+          &copy; Copyright 2023, Matthew Martz.<br/>
         Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.3.1.<br/>
     </p>
   </div>
