--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="col-12 col-md-3 bd-sidebar"><div class="logo"><img src="_static/profile.jpg"></div>
 <div class="snippet">
     <div class="name">Matthew Martz, PhD</div>
-    <div class="title">Principal, Research and Machine Learning at PenroseHill/Firstleaf</div>
+    <div class="title">Data Science Technical Lead at AgBiome</div>
     <div class="specialties">Machine Learning | Predictive Modeling | Data Science | Biomedical Research</div>
 </div>
           </div>
@@ -174,6 +174,7 @@ in the consumer sales space and chemical profile recommenders.</p>
 </div>
 <div class="card-body docutils">
 <p class="card-text">Data Science Technical Lead at AgBiome</p>
+<p class="card-text">[more to come]</p>
 </div>
 </div>
 </div>
@@ -353,7 +354,7 @@ for beginners that will build up to real world examples.</p>
     <footer class="footer mt-5 mt-md-0">
   <div class="container">
     <p>
-          &copy; Copyright 2022, Matthew Martz.<br/>
+          &copy; Copyright 2023, Matthew Martz.<br/>
         Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.3.1.<br/>
     </p>
   </div>
