--- a/mutaku.github.io/README/index.html
+++ b/mutaku.github.io/README/index.html
@@ -131,7 +131,7 @@
           <div class="col-12 col-md-3 bd-sidebar"><div class="logo"><img src="../../_static/profile.jpg"></div>
 <div class="snippet">
     <div class="name">Matthew Martz, PhD</div>
-    <div class="title">Principal, Research and Machine Learning at PenroseHill/Firstleaf</div>
+    <div class="title">Data Science Technical Lead at AgBiome</div>
     <div class="specialties">Machine Learning | Predictive Modeling | Data Science | Biomedical Research</div>
 </div>
           </div>
@@ -183,7 +183,7 @@
     <footer class="footer mt-5 mt-md-0">
   <div class="container">
     <p>
-          &copy; Copyright 2022, Matthew Martz.<br/>
+          &copy; Copyright 2023, Matthew Martz.<br/>
         Created using <a href="http://sphinx-doc.org/">Sphinx</a> 3.3.1.<br/>
     </p>
   </div>
