--- a/about/index.html
+++ b/about/index.html
@@ -227,6 +227,7 @@ Manuscript and Grant Preparation | Patent Development</p>
 </div>
 <div class="card-body docutils">
 <ul class="simple">
+<li><p class="card-text">Data Science Technical Lead at AgBiome</p></li>
 <li><p class="card-text">Principal, Research and Machine Learning and Head of Data Science at Penrose Hill/Firstleaf</p></li>
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
 <li><p class="card-text">PhD in Biochemistry and Molecular Biology, Thomas Jefferson University</p></li>
