change header colors

--- a/notes_on_mlops_one/index.html
+++ b/notes_on_mlops_one/index.html
@@ -167,7 +167,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Closing the loop in machine learning systems. Right now many machine learning systems still largely adhere to a unidirectional flow of information from data source to prediction. But this leads to stale and fundamentally broken pipelines.</p>
 </div>
 <div class="card-body docutils">
@@ -184,7 +184,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Declarative systems for machine learning. For a few years now, we’ve already seen the modeling tooling for ML become commoditized with the advent of software like PyTorch as well as higher-level libraries like HF Transformers. This is all a welcome step for the field, but I believe we can do even more. Democratizing access to something involves developing abstractions that hide unnecessary implementation details for downstream users. Declarative machine learning systems are some of the most exciting next phases of this modeling evolution.</p>
 </div>
 <div class="card-body docutils">
@@ -198,7 +198,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Real-time machine learning. ML systems are data-driven by design, and so for most applications having up-to-date data allows for more accurate predictions. Real-time ML can mean a lot of things, but in general it’s better to have fresher models. This is something we will continue to see investment in over the next few years, as building real-time systems is a difficult infrastructure challenge.</p>
 </div>
 <div class="card-body docutils">
@@ -212,7 +212,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Better data management. Data is the life-blood of every machine learning system, and in a future world where ML powers most enterprise functions, data is the life-blood of every organization. And yet, I think we have a long way to go with developing tools for management of data across its lifecycle from sourcing and curating to labelling and analyzing. Don’t get me wrong: I love Snowflake as much as the next person. But I believe we can do better than just a handful of siloed tables sitting around in an organization’s VPN. How can we make it easy for data practitioners to quickly answer questions about what data they have, what they can do with the data, and what they still need?</p>
 </div>
 <div class="card-body docutils">
@@ -226,7 +226,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Merging business insight tooling with data science/machine learning workflows. The tooling around business insights has always been more mature than that of data science. One reason for this has to do with the fact that data analysts’ output tends to be more readily surfaced to business leaders, and hence BI tooling investment is deemed more critical to an organization’s bottom line.</p>
 </div>
 <div class="card-body docutils">
@@ -240,7 +240,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Talent shortage remains rampant. For many organizations these days, it’s hard to attract quality machine learning talent.</p>
 </div>
 <div class="card-body docutils">
@@ -254,7 +254,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Increasing consolidation around end-to-end platforms. The big 3 cloud providers (AWS, GCP, Azure) and other specialized players (DataRobot, Databricks, Dataiku) are all aggressively trying to own practitioner’s end-to-end ML workflows.</p>
 </div>
 <div class="card-body docutils">
@@ -268,7 +268,7 @@ we did things well and directions I would like to see us take.</p>
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
 <div class="card w-100 shadow docutils">
-<div class="card-header font-weight-bold bg-info docutils">
+<div class="card-header text-secondary docutils">
 <p class="card-text">Cultural adoption of machine learning thinking. As we continue to get more advanced tooling, organizations will adopt a machine learning mindset around their products and teams. In many ways, this also echoes the cultural shift that happened as DevOps principles were adopted. A few things we can expect to see here are more holistic systems thinking (break the silos), augmenting feedback loops in products, and instilling a mentality of continual experimentation and learning.</p>
 </div>
 <div class="card-body docutils">
