change some phrasing

--- a/index.html
+++ b/index.html
@@ -169,19 +169,13 @@
 </div>
 <div class="card-body docutils">
 <p class="card-text">Head of Data Science and Technical Lead at AgBiome</p>
-<ul class="simple">
-<li><p class="card-text">Led a team of Data Scientists working to drive biological research and accelerate product development</p></li>
-<li><p class="card-text">Led a team of Data Scientists working to drive biological research and accelerate product development</p></li>
-<li><p class="card-text">Developed a propriety predictive artificial intelligence decision guidance system to serve as a core to our proprietary natural and whole microbe product discovery platform</p></li>
-<li><p class="card-text">Worked on developing, and began implementation of, a cross-indication prediction platform to enable multi-target identification</p></li>
-<li><p class="card-text">Served as Data Science liaison across the company, communicate strategy, accomplishments, initiatives, and best practices</p></li>
-<li><p class="card-text">Develop the long-term Data Science strategy and vision, hiring plan, technological innovation pipeline, and overall project management for the team</p></li>
-<li><p class="card-text">Contributed to external manuscripts and internal white papers for both research and Data Science</p></li>
-<li><p class="card-text">Sat on a team of technical leaders that drove research initiatives across the company and served as a hive mind to solve challenges across domains</p></li>
-<li><p class="card-text">Developed a novel algorithm to use interpretable machine learning model ensembles to traverse genomic annotations and drive mode of action discovery from small datasets</p></li>
-<li><p class="card-text">Developed predictive modeling platform to accelerate product discovery in indication screening</p></li>
-<li><p class="card-text">and more! Please ask!</p></li>
-</ul>
+<p class="card-text">Led a growing team of Data Scientists working to drive biological research and accelerate product development.</p>
+<p class="card-text">Developed and drove 4 year strategy and vision for Data Science, Data Engineering, Bioinformatics, and Data Product for entire organization.</p>
+<p class="card-text">Served as Data Science liaison across the company, communicating strategy, accomplishments, initiatives, and best practices. Developed the long-term Data Science strategy and vision, hiring plan, technological innovation pipeline, and overall project management for the department.</p>
+<p class="card-text">Developed a proprietary predictive artificial intelligence decision guidance system to serve as a core to our proprietary natural and whole microbe product discovery platform.</p>
+<p class="card-text">Led Data Science contribution to external manuscripts and internal white papers for both research, Data Science, and SOPs.</p>
+<p class="card-text">Sat on a team of technical leaders that drove research initiatives across the company and served as a hive mind to solve challenges across domains. Identified and addressed gaps in research and Data Science.</p>
+<p class="card-text">Developed a novel algorithm to use interpretable machine learning model ensembles to traverse genomic annotations and drive mode of action discovery from small datasets. Further, developed a predictive modeling platform to accelerate product discovery in indication screening. Worked on developing, and began implementation of, a cross-indication prediction platform to enable multi-target identification.</p>
 </div>
 </div>
 </div>
