--- a/about/index.html
+++ b/about/index.html
@@ -174,7 +174,7 @@ in the consumer sales space and chemical profile recommenders.</p>
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">Head of Data Science and Technical Lead at AgBiome</p>
+<p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision</p>
 <p class="card-text">Led a growing team of Data Scientists working to drive biological research and accelerate product development.</p>
 <p class="card-text">Developed and drove 4 year strategy and vision for Data Science, Data Engineering, Bioinformatics, and Data Product for entire organization.</p>
 <p class="card-text">Served as Data Science liaison across the company, communicating strategy, accomplishments, initiatives, and best practices. Developed the long-term Data Science strategy and vision, hiring plan, technological innovation pipeline, and overall project management for the department.</p>
@@ -234,7 +234,7 @@ Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbi
 </div>
 <div class="card-body docutils">
 <ul class="simple">
-<li><p class="card-text">Head of Data Science and Technical Lead at AgBiome</p></li>
+<li><p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision</p></li>
 <li><p class="card-text">Principal, Research and Machine Learning and Head of Data Science at Penrose Hill/Firstleaf</p></li>
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
 <li><p class="card-text">PhD in Biochemistry and Molecular Biology, Thomas Jefferson University</p></li>
