--- a/summer_of_AI/index.html
+++ b/summer_of_AI/index.html
@@ -168,7 +168,7 @@ looked at the broader societal perspective; I will link the podcast shortly.</p>
 <p class="card-text">Name, Title, and what do you do at AgBiome?</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">Matthew Martz - Data Science Technical Lead - Bring innovation to Data Science and keep us at the cutting edge of our field through tools, methods, best practices, and in-house development with work on our digital twin platform - an artificial intelligence guidance system.</p>
+<p class="card-text">Matthew Martz - Head of Data Science/ML/AI and Technical Lead / Strategic Vision - Bring innovation to Data Science and keep us at the cutting edge of our field through tools, methods, best practices, and in-house development with work on our digital twin platform - an artificial intelligence guidance system.</p>
 </div>
 </div>
 </div>
