--- a/notes_on_mlops_one/index.html
+++ b/notes_on_mlops_one/index.html
@@ -130,7 +130,7 @@
           <div class="col-12 col-md-3 bd-sidebar"><div class="logo"><img src="../_static/profile.jpg"></div>
 <div class="snippet">
     <div class="name">Matthew Martz, PhD</div>
-    <div class="title">Head of Data Science and Technical Lead at AgBiome</div>
+    <div class="title">Head of Data Science/ML/AI and Technical Lead / Strategic Vision at AgBiome</div>
     <div class="specialties">Machine Learning | Predictive Modeling | Data Science | Biomedical Research | Strategy</div>
 </div>
           </div>
@@ -294,6 +294,10 @@ we did things well and directions I would like to see us take.</p>
   </span>
   <span>&nbsp;</span>
   <span style="float: right">
+     Next: 
+    <a href="../summer_of_AI/">
+      Summer of AI - An AgBiome Perspective 
+    </a>
     
   </span>
 </div>
