--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbi
 <div class="card-body docutils">
 <ul class="simple">
 <li><p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision</p></li>
-<li><p class="card-text">Principal, Research and Machine Learning and Head of Data Science at Penrose Hill/Firstleaf</p></li>
+<li><p class="card-text">Head of Data Science and Principal, Research and Machine Learning at Penrose Hill/Firstleaf</p></li>
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
 <li><p class="card-text">PhD in Biochemistry and Molecular Biology, Thomas Jefferson University</p></li>
 <li><p class="card-text">Research Postdoctoral Fellow, Lineberger Cancer Center, University of North Carolina at Chapel Hill</p></li>
