--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision</p>
+<p class="card-text">HEAD OF DATA SCIENCE/ML/AI AND TECHNICAL LEAD / STRATEGIC VISION</p>
 <p class="card-text">Led a growing team of Data Scientists working to drive biological research and accelerate product development.</p>
 <p class="card-text">Developed and drove 4 year strategy and vision for Data Science, Data Engineering, Bioinformatics, and Data Product for entire organization.</p>
 <p class="card-text">Served as Data Science liaison across the company, communicating strategy, accomplishments, initiatives, and best practices. Developed the long-term Data Science strategy and vision, hiring plan, technological innovation pipeline, and overall project management for the department.</p>
 <p class="card-text">Developed a proprietary predictive artificial intelligence decision guidance system to serve as a core to our proprietary natural and whole microbe product discovery platform.</p>
 <p class="card-text">Led Data Science contribution to external manuscripts and internal white papers for both research, Data Science, and SOPs.</p>
 <p class="card-text">Sat on a team of technical leaders that drove research initiatives across the company and served as a hive mind to solve challenges across domains. Identified and addressed gaps in research and Data Science.</p>
-<p class="card-text">Developed a novel algorithm to use interpretable machine learning model ensembles to traverse genomic annotations and drive mode of action discovery from small datasets. Further, developed a predictive modeling platform to accelerate product discovery in indication screening. Worked on developing, and began implementation of, a cross-indication prediction platform to enable multi-target identification.</p>
+<p class="card-text">Developed a novel algorithm to use interpretable machine learning model ensembles to traverse genomic annotations and drive mode of action discovery from small datasets. Designed and developed a predictive modeling platform to accelerate product discovery in indication screening. Designed and developed a cross-indication prediction platform to enable multi-target identification.</p>
 </div>
 </div>
 </div>
@@ -193,6 +193,7 @@
 <p class="card-text">Previously</p>
 </div>
 <div class="card-body docutils">
+<p class="card-text">HEAD OF DATA SCIENCE AND PRINCIPAL, RESEARCH AND MACHINE LEARNING</p>
 <p class="card-text">Created and maintained the core, patented algorithms behind the Firstleaf wine club.</p>
 <p class="card-text">I built and led a local and distributed team of Data Scientists and Machine Learning engineers (The Research and Machine Learning Team) developing machine learning and AI platforms to drive real time recommendations, inform business strategy, and create/integrate with product design life cycle. This included the end-to-end development of the ML stack using both traditional ML and cutting edge deep learning techniques including computer vision, generative AI, and NLP, along with novel algorithm development.</p>
 <p class="card-text">I was further responsible for the continual growth of the team, maintaining stakeholder communication, driving Data Science strategy across the organization, and directly working with C-level executives to maintain a vision and communicate strategy and execution plans aligned with business executives.</p>
