--- a/index.html
+++ b/index.html
@@ -172,11 +172,14 @@
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">HEAD OF DATA SCIENCE/ML/AI AND TECHNICAL LEAD / STRATEGIC VISION</p>
+<p class="card-text">Served as director of Data Science/Machine Learning/Artificial Intelligence strategy and innovation initiatives.</p>
 <p class="card-text">Led a growing team of Data Scientists working to drive biological research and accelerate product development.</p>
+<p class="card-text">Team size ranged from 7 to over 20, across disciplines of Data and Product.</p>
 <p class="card-text">Developed and drove 4 year strategy and vision for Data Science, Data Engineering, Bioinformatics, and Data Product for entire organization.</p>
+<p class="card-text">Advocate and conduct learning around Data Science/ML/AI products and platforms both to internal teams, executive team and board members, and external partners and collaborators (customers).</p>
+<p class="card-text">Directly contributed to high impact publications and invited for speaking engagements.</p>
 <p class="card-text">Served as Data Science liaison across the company, communicating strategy, accomplishments, initiatives, and best practices. Developed the long-term Data Science strategy and vision, hiring plan, technological innovation pipeline, and overall project management for the department.</p>
-<p class="card-text">Developed a proprietary predictive artificial intelligence decision guidance system to serve as a core to our proprietary natural and whole microbe product discovery platform.</p>
+<p class="card-text">Developed a proprietary predictive artificial intelligence decision guidance system to serve as a core to our proprietary natural and whole microbe product discovery platform - GENESIS, a digital twin technology. This digital twin technology has already generated a large corpus of actionable research, product leads, and accelerated screening paradigms to put the best leads in the field. Excitingly, my team was able to harness GENESIS to generate cross-indication predictive models to drive and accelerate lead identification across the research platform.</p>
 <p class="card-text">Led Data Science contribution to external manuscripts and internal white papers for both research, Data Science, and SOPs.</p>
 <p class="card-text">Sat on a team of technical leaders that drove research initiatives across the company and served as a hive mind to solve challenges across domains. Identified and addressed gaps in research and Data Science.</p>
 <p class="card-text">Developed a novel algorithm to use interpretable machine learning model ensembles to traverse genomic annotations and drive mode of action discovery from small datasets. Designed and developed a predictive modeling platform to accelerate product discovery in indication screening. Designed and developed a cross-indication prediction platform to enable multi-target identification.</p>
@@ -196,6 +199,7 @@
 <p class="card-text">HEAD OF DATA SCIENCE AND PRINCIPAL, RESEARCH AND MACHINE LEARNING</p>
 <p class="card-text">Created and maintained the core, patented algorithms behind the Firstleaf wine club.</p>
 <p class="card-text">I built and led a local and distributed team of Data Scientists and Machine Learning engineers (The Research and Machine Learning Team) developing machine learning and AI platforms to drive real time recommendations, inform business strategy, and create/integrate with product design life cycle. This included the end-to-end development of the ML stack using both traditional ML and cutting edge deep learning techniques including computer vision, generative AI, and NLP, along with novel algorithm development.</p>
+<p class="card-text">Team size ranged from 5 to 10, across disciplines of Data and Product.</p>
 <p class="card-text">I was further responsible for the continual growth of the team, maintaining stakeholder communication, driving Data Science strategy across the organization, and directly working with C-level executives to maintain a vision and communicate strategy and execution plans aligned with business executives.</p>
 <p class="card-text">The Research and Machine Learning team was responsible for identifying and developing key Data Science and Machine Learning technologies for Firstleaf. We utilized cutting edge approaches to both empower internal company function as well as customer facing products. The team was also responsible for design and implementation of the patented (developed technologies, co-write and secured patents) algorithms that drove the Firstleaf experience. The team was responsible for initiating, driving, and executing on data science strategies across Marketing, Finance, Business Intelligence, and Wine Making functions – the Research and Machine Learning team was a full spectrum B2B and B2C solution within Firstleaf.</p>
 </div>
@@ -211,10 +215,7 @@
 <p class="card-text">Expertise</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">Predictive Modeling | Medicinal AI | Machine Learning | Algorithm Development | Technical Writing |
-Leadership | Mentorship | Team Building | Cross-departmental Collaboration | Data Science | Artificial Intelligence |
-Python/Software Engineering | Cell Biology | Biophysics | Microscopy | Cancer Therapeutics | E-commerce |
-Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbiology | Crop Protection | AgTech | Biotechnology | Strategy and Vision Building | Resource Allocation</p>
+<p class="card-text">Predictive Modeling | Medicinal AI | Machine Learning | Strategy and Vision Building | Resource Allocation Logistics | Algorithm Development | Technical Writing | Leadership | Mentorship | Team Building | Cross-departmental Collaboration | Data Science | Artificial Intelligence | Python/Software Engineering | Cell Biology | Biophysics | Microscopy | Cancer Therapeutics | E-commerce | Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbiology | Crop Protection | AgTech | Digital Twinning | Biotechnology | Personalized Medicine</p>
 </div>
 </div>
 </div>
@@ -234,10 +235,11 @@ Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbi
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
 <li><p class="card-text">PhD in Biochemistry and Molecular Biology, Thomas Jefferson University</p></li>
 <li><p class="card-text">Research Postdoctoral Fellow, Lineberger Cancer Center, University of North Carolina at Chapel Hill</p></li>
+<li><p class="card-text">20+ Member teams across disciplines in data and product</p></li>
 <li><p class="card-text">21 years of Software Engineering and Data Science experience</p></li>
 <li><p class="card-text">17 years of rigorous scientific training in academic programs</p></li>
 <li><p class="card-text">8+ years of Data Science and Machine Learning leadership</p></li>
-<li><p class="card-text">Industry proven leader in Data Science and Machine Learning</p></li>
+<li><p class="card-text">Industry proven leader in Data Science and Machine Learning Innovation</p></li>
 </ul>
 </div>
 </div>
@@ -306,6 +308,7 @@ Microsoft Office | Google Suite | Matlab | Full Stack Dev | APIs | MLOps | DevOP
 </div>
 <div class="card-body docutils">
 <ul class="simple">
+<li><p class="card-text">Nicholas C. Dove, Laura K. Potter, Matthew K. Martz*, Douglas Lawton*. <a href="#id1"><span class="problematic" id="id2">*</span></a>These authors contributed equally to the work. Ground Truthed Models to Inform Tangible Guids of Global Microbial Diversity Using Deep Neural Network Computer Vision. In Preparation.</p></li>
 <li><p class="card-text">Yong Jun Goh*, Brody J. DeYoung, Nicholas C. Dove, Brant R. Johnson, Matthew K. Martz, Patrick Videau. AgBiome: Harnessing the Microbial World for Human Benefit. Trends in Biotechnology. In press.</p></li>
 <li><p class="card-text">Ramona Schrage, …, Matthew Martz, …, Evi Kostenis. The experimental power of FR900359 to study Gq-regulated biological processes. Nature Communications 6, Article number: 10156. 14 December 2015.</p></li>
 <li><p class="card-text">Michelle C Helms, Elda Grabocka, Matthew K Martz, Christopher C Fischer, Nobuchika Suzuki, Philip B Wedegaertner. Mitotic-dependent phosphorylation of leukemia-associated RhoGEF (LARG) by Cdk1. Cellular Signalling, Volume 28, Issue 1, January 2016, Pages 43-52.</p></li>
