--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <p class="card-text">Previously</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">HEAD OF DATA SCIENCE AND PRINCIPAL, RESEARCH AND MACHINE LEARNING</p>
+<p class="card-text">HEAD OF DATA SCIENCE/ML/AI AND PRINCIPAL RESEARCH AND MACHINE LEARNING</p>
 <p class="card-text">Created and maintained the core, patented algorithms behind the Firstleaf wine club.</p>
 <p class="card-text">I built and led a local and distributed team of Data Scientists and Machine Learning engineers (The Research and Machine Learning Team) developing machine learning and AI platforms to drive real time recommendations, inform business strategy, and create/integrate with product design life cycle. This included the end-to-end development of the ML stack using both traditional ML and cutting edge deep learning techniques including computer vision, generative AI, and NLP, along with novel algorithm development.</p>
 <p class="card-text">Team size ranged from 5 to 10, across disciplines of Data and Product.</p>
