--- a/search/index.html
+++ b/search/index.html
@@ -104,7 +104,7 @@
           <div class="col-12 col-md-3 bd-sidebar"><div class="logo"><img src="../_static/profile.jpg"></div>
 <div class="snippet">
     <div class="name">Matthew Martz, PhD</div>
-    <div class="title">Head of Data Science/ML/AI and Technical Lead / Strategic Vision at AgBiome</div>
+    <div class="title">Director of Data Science/ML/AI and Technical Lead / Strategic Vision</div>
     <div class="specialties">Machine Learning | Predictive Modeling | Data Science | Biomedical Research | Strategy</div>
 </div>
           </div>
