--- a/about/index.html
+++ b/about/index.html
@@ -163,7 +163,7 @@
 <p>My background is in Quantitative Cell Biology and I have a PhD in Biochemistry and Molecular Biology.
 I spent much of my career researching novel cancer therapeutics through live cell imaging and machine learning.
 You can now find me developing and implementing machine learning platforms and algorithms for everything from
-optimization problems to personalized medicine and medicinal AI. In recent years I have researched and built
+optimization problems to precision medicine and medicinal AI. In recent years I have researched and built
 novel recommenders, 24/7 production machine learning solutions, and received patents for personalization solutions
 in the consumer sales space and chemical profile recommenders.</p>
 <p>Most recently, I have been working in the Biotechnology space where I have developed the long-term strategy and vision for Data Science, led a growing team of Data Scientists to develop novel algorithms in the predictive modeling and Bioinformatics spaces, and accelerated biological discovery. Moreover, I designed and implemented novel algorithms to detect differential modes of action in both natural products and whole microbe systems, and engineered a proprietary online learning platform to serve as an artificial intelligence decision guidance system for our extensive microbial collection and proprietary product discovery platform (Genesis), a digital twin.</p>
@@ -174,6 +174,21 @@ in the consumer sales space and chemical profile recommenders.</p>
 <div class="card w-100 shadow docutils">
 <div class="card-header text-secondary font-weight-bold docutils">
 <p class="card-text">Currently</p>
+</div>
+<div class="card-body docutils">
+<p class="card-text">TRAITS DIGITAL BIOLOGY LEAD</p>
+<p class="card-text">[Details to come]</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sphinx-bs container pb-4 docutils">
+<div class="row docutils">
+<div class="d-flex col-lg-12 p-0 docutils">
+<div class="card w-100 shadow docutils">
+<div class="card-header text-secondary font-weight-bold docutils">
+<p class="card-text">Previously</p>
 </div>
 <div class="card-body docutils">
 <p class="card-text">DIRECTOR OF DATA SCIENCE/ML/AI AND TECHNICAL LEAD/STRATEGIC VISION</p>
@@ -223,7 +238,7 @@ in the consumer sales space and chemical profile recommenders.</p>
 <p class="card-text">Predictive Modeling | Medicinal AI | Machine Learning | Algorithm Development | Technical Writing |
 Leadership | Mentorship | Team Building | Cross-departmental Collaboration | Data Science | Artificial Intelligence |
 Python/Software Engineering | Cell Biology | Biophysics | Microscopy | Cancer Therapeutics | E-commerce |
-Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbiology | Crop Protection | AgTech | Biotechnology | Strategy and Vision Building | Resource Allocation</p>
+Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbiology | Crop Protection | AgTech | Biotechnology | Strategy and Vision Building | Resource Allocation | Multimodal Modeling</p>
 </div>
 </div>
 </div>
@@ -238,6 +253,7 @@ Manuscript and Grant Preparation | Patent Development | Bioinformatics | Microbi
 </div>
 <div class="card-body docutils">
 <ul class="simple">
+<li><p class="card-text">Digital Biology Lead</p></li>
 <li><p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision</p></li>
 <li><p class="card-text">Head of Data Science and Principal, Research and Machine Learning at Penrose Hill/Firstleaf</p></li>
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
