--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 </div>
 <div class="card-body docutils">
 <ul class="simple">
-<li><p class="card-text">Digital Biology Lead</p></li>
-<li><p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision</p></li>
+<li><p class="card-text">Digital Biology Lead at Syngenta</p></li>
+<li><p class="card-text">Head of Data Science/ML/AI and Technical Lead / Strategic Vision at AgBiome</p></li>
 <li><p class="card-text">Head of Data Science and Principal, Research and Machine Learning at Penrose Hill/Firstleaf</p></li>
 <li><p class="card-text">BS in Biochemistry and Molecular Biology, The Pennsylvania State University</p></li>
 <li><p class="card-text">PhD in Biochemistry and Molecular Biology, Thomas Jefferson University</p></li>
