--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">TRAITS DIGITAL BIOLOGY LEAD</p>
+<p class="card-text">DIGITAL BIOLOGY LEAD (traits)</p>
 <p class="card-text">[Details to come]</p>
 </div>
 </div>
