--- a/about/index.html
+++ b/about/index.html
@@ -176,7 +176,7 @@ in the consumer sales space and chemical profile recommenders.</p>
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">TRAITS DIGITAL BIOLOGY LEAD</p>
+<p class="card-text">DIGITAL BIOLOGY LEAD (traits)</p>
 <p class="card-text">[Details to come]</p>
 </div>
 </div>
