--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 <p class="card-text">Currently</p>
 </div>
 <div class="card-body docutils">
-<p class="card-text">TRAIT DISCOVERY AND DELIVERY PROGRAM LEAD
-DIGITAL BIOLOGY LEAD (traits)
-BENCHLING RESEARCH PIPELINE TECHNICAL LEAD</p>
+<p class="card-text">TRAIT DISCOVERY AND DELIVERY PROGRAM LEAD</p>
+<p class="card-text">DIGITAL BIOLOGY LEAD (traits)</p>
+<p class="card-text">BENCHLING RESEARCH PIPELINE TECHNICAL LEAD</p>
 <p class="card-text">[Details to come]</p>
 </div>
 </div>
