--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </ul>
 <p>My expertise is in building and leading teams of Data Scientists, Machine Learning Engineers, Data Engineers, and Data Product experts of diverse experience levels, distributed across cultural and knowledge bases, to drive innovation, product development, and cutting edge, actionable research. I have a proven track record of mentoring, growing, executing, and building strategy around ambitious goals across the Data Science technical platform to provide business value.</p>
 <p>My background is in Quantitative Cell Biology and I have a PhD in Biochemistry and Molecular Biology. I spent much of my career researching novel cancer therapeutics through live cell imaging and machine learning. You can now find me developing and implementing machine learning platforms and algorithms for everything from optimization problems to precision medicine and medicinal AI. In recent years I have researched and built novel recommenders, 24/7 production machine learning solutions, and received patents for personalization solutions in the consumer sales space and chemical profile recommenders.</p>
-<p>Most recently, I have been working in the Biotechnology space where I have developed the long-term strategy and vision for Data Science, led a growing team of Data Scientists to develop novel algorithms in the predictive modeling and Bioinformatics spaces, and accelerated biological discovery. Moreover, I designed and implemented novel algorithms to detect differential modes of action in both natural products and whole microbe systems, and engineered a proprietary online learning platform to serve as an artificial intelligence decision guidance system for our extensive microbial collection and proprietary product discovery platform (Genesis), a digital twin.</p>
+<p>Most recently, I have been working in the Biotechnology space where I have developed the long-term strategy and vision for Data Science, led a growing team of Data Scientists to develop novel algorithms in the predictive modeling and Bioinformatics spaces, and accelerated biological discovery. Moreover, I designed and implemented novel algorithms to detect differential modes of action in both natural products and whole microbe systems, and engineered a proprietary online learning platform to serve as an artificial intelligence decision guidance system for our extensive microbial collection and proprietary product discovery platform (Genesis), a digital twin. I rebuilt research and enablement programs across domains for knowledge generation using cutting edge deep learning techniques on records data and data governance and provenance at both the discovery and enterprise levels.</p>
 <div class="sphinx-bs container pb-4 docutils">
 <div class="row docutils">
 <div class="d-flex col-lg-12 p-0 docutils">
@@ -176,7 +176,14 @@
 <p class="card-text">TRAIT DISCOVERY AND DELIVERY PROGRAM LEAD</p>
 <p class="card-text">DIGITAL BIOLOGY LEAD (traits)</p>
 <p class="card-text">BENCHLING RESEARCH PIPELINE TECHNICAL LEAD</p>
-<p class="card-text">[Details to come]</p>
+<p class="card-text">Led Trait Discovery and Delivery efforts within RD and IT Digital Science</p>
+<p class="card-text">Owned stack from data model, application landscape, and AI research initiatives from gene discovery to trait (phenotype) introgression</p>
+<p class="card-text">Team comprised business (Analysts, Architects, Delivery Managers, Scrum Masters), IT (Developers, QA, MLOps, DevOPs), and science (SMEs, Product Owners, Wet Lab Researchers) domains</p>
+<p class="card-text">Mentored junior team members with a focus on professional development and upskilling opportunities</p>
+<p class="card-text">Led Data Science efforts to research and deploy foundational Large Language Models (LLMs) for protein design to predict expression levels of various molecular biology constructs as a software workbench for bench researchers - work emphasized multimodal data and contextualization/fine tuning</p>
+<p class="card-text">Built strategy and vision across discovery and delivery to streamline scientific application portfolio, create single source of truth data streams, and initiated foundational work to bring cutting edge ML/AI technologies to the scientific pipeline</p>
+<p class="card-text">Communicated strategy and work initiatives to  secure funding and oversee resourcing of execution</p>
+<p class="card-text">Collaborated with stakeholders across research and business domains to ensure cooperative acceleration and growth</p>
 </div>
 </div>
 </div>
